[project]
name = "higlass-python"
version = "1.3.3"
description = "Python bindings for HiGlass"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Fritz Lekschas", email = "code@lekschas.de" },
  { name = "Nezar Abdennur", email = "nabdennur@gmail.com" },
  { name = "Peter Kerpdjiev", email = "pkerpedjiev@gmail.com" },
  { name = "Trevor Manz", email = "trevor.j.manz@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
urls = { homepage = "https://github.com/higlass/higlass-python" }
dependencies = [
  "anywidget>=0.9.0",
  "higlass-schema>=0.2.0",
  "typing-extensions ; python_version<'3.9'",
]

[dependency-groups]
dev = ["anywidget[dev]", "jupyterlab", "pytest", "ruff"]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
extend-select = [
  "E",  # style errors
  # "D",  # pydocstyle
  "F",  # pyflakes
  "I",  # isort
  "RUF",  # ruff-specific rules
  "UP",  # pyupgrade
  "W",  # style  warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F403",  # unused-star-used
  "F401",  # unused import
]
"examples/*.ipynb" = [
  "F811",  # redefintion
]

[tool.uv.workspace]
members = ["packages/*"]
