[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "higlass-python"
description = "Python bindings for HiGlass"
authors = [
    { name = "Fritz Lekschas", email = "code@lekschas.de" },
    { name = "Nezar Abdennur", email = "nabdennur@gmail.com" },
    { name = "Peter Kerpdjiev", email = "pkerpedjiev@gmail.com" },
    { name = "Trevor Manz", email = "trevor.j.manz@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
readme = "README.md"
dependencies = [
    "higlass-schema>=0.2.0",
    "anywidget>=0.9.0",
]
requires-python = ">=3.10"
urls = { homepage = "https://github.com/higlass/higlass-python" }

[dependency-groups]
dev = [
    "anywidget[dev]>=0.9.13",
# TODO Add for typechecking after we drop 3.8 support
#   "clodius>=0.20.4",
    "jupyterlab>=4.3.5",
    "pytest>=8.3.5",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.hatch.build.targets.wheel]
packages = ["src/higlass"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "E", # style errors
    # "D",  # pydocstyle
    "F",   # pyflakes
    "I",   # isort
    "RUF", # ruff-specific rules
    "UP",  # pyupgrade
    "W",   # style  warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F403", # unused-star-used
    "F401", # unused import
]
"examples/*.ipynb" = [
    "F811", # redefintion
]

[tool.ty.src]
exclude = ["examples/Plugin.ipynb", "docs/conf.py", "docs/build.py"]

[tool.uv]
required-version = ">=0.10.0"
