[metadata]
name = hg
author = Trevor Manz
author_email = trevor.j.manz@gmail.com
license = MIT
description = Python bindings for HiGlass
url = https://github.com/manzt/hg
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
setup_requires = setuptools_scm
install_requires =
    higlass_schema
    jinja2
    portpicker
    uvicorn
    starlette
    slugid
python_requires = >=3.7
