[metadata]
name = higlass-schema
author = Trevor Manz
author_email = trevor.j.manz@gmail.com
license = MIT
description = Pydantic models for HiGlass
url = https://github.com/higlass/higlass-schema
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
setup_requires = setuptools_scm
install_requires =
    pydantic
    rich
python_requires = >=3.7

[options.entry_points]
console_scripts =
    hgschema = higlass_schema.cli:main
